--- a/frontend-react-js/src/components/MessageGroupItem.css
+++ b/frontend-react-js/src/components/MessageGroupItem.css
@@ -1,7 +1,7 @@
 .message_group_item {
   position: relative;
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   overflow: hidden;
   padding: 20px;
   cursor: pointer;
